Add /address/:address/:contract/:id endpoint
