# src/api-serverless/openapi.yaml
@@ -298,6 +298,54 @@ paths:
                     type: integer
                     description: The latest block number associated with the update.
 
+  /address/{address}/{contract}/{id}:
+    get:
+      tags:
+        - TDH by Address
+      summary: Retrieve TDH for a Specific Contract and Token by Address
+      description: >-
+        Get the Total Days Held (TDH) for a specific contract and token associated with
+        a specific address.
+      parameters:
+        - name: address
+          in: path
+          required: true
+          description: Address to retrieve the contract token TDH for.
+          schema:
+            type: string
+            example: '0x123456789abcdef'
+        - name: contract
+          in: path
+          required: true
+          schema:
+            type: string
+            enum:
+              - memes
+              - gradients
+              - nextgen
+          description: The contract type for the token.
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+          description: The identifier for the token.
+      responses:
+        '200':
+          description: >-
+            A JSON object containing the TDH, contract address, token ID, and the latest block number.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  tdh:
+                    type: integer
+                    description: The total days held for the token by the address.
+                  block:
+                    type: integer
+                    description: The latest block number associated with the update.
+
   /address/{address}/memes_seasons:
     get:
       tags:
